--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,21 @@
-
 fastapi
-uvicorn[standard]
+uvicorn
+python-multipart
 sqlalchemy
 pandas
+pytest
+pytest-asyncio
+httpx
 python-multipart
+httpx
+fastapi
+matplotlib
+plotly
+pandas
+python-multipart
+starlette
+uvicorn
+sqlalchemy
+pytest
+httpx
+fastapi-cors
